@@ -51,12 +51,12 @@ public:
 		FLAG_HUB = 0x20,
 		MASK_CLIENT_TYPE = FLAG_BOT | FLAG_REGISTERED | FLAG_OP | FLAG_SU | FLAG_OWNER | FLAG_HUB,
 		FLAG_PASSWORD = 0x100,
-		FLAG_HIDDEN = 0x101,
+		FLAG_HIDDEN = 0x200,
 		/** Extended away, no need to send msg */
-		FLAG_EXT_AWAY = 0x102,
+		FLAG_EXT_AWAY = 0x400,
 		/** Plugins can use these flags to disable various checks */
 		/** Bypass ip check */
-		FLAG_OK_IP = 0x200
+		FLAG_OK_IP = 0x800
 	};
 
 
@@ -121,7 +121,12 @@ public:
 
 	ADCHPP_DLL virtual void disconnect(Util::Reason reason) = 0;
 
-	ADCHPP_DLL virtual size_t getQueuedBytes();
+	/** The number of bytes in the write buffer */
+	ADCHPP_DLL virtual size_t getQueuedBytes() const;
+
+	/** The time that this entity's write buffer size exceeded the maximum buffer size, 0 if no overflow */
+	ADCHPP_DLL virtual time_t getOverflow() const;
+
 protected:
 	virtual ~Entity();
 
